--- a/HTML/index.html
+++ b/HTML/index.html
@@ -7,12 +7,15 @@
     <!--  CSS Link -->
     <link type="text/css" rel="stylesheet" href="../CSS/Style.css">
     <!-- Bootstrap  -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
- 
-    
+
+
     <!-- Load an icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="../JS/Scripts"></script>
@@ -24,7 +27,7 @@
 <body>
     <div class="container">
         <header>
-    
+
             <div class="topnav" id="myTopnav" style="background-color: chocolate; border-radius: 10px;">
                 <a href="index.html" class="active"><img src="../Images/nsw.jpg" width="70" height="35"
                         class="d-inline-block align-top logimg" alt=""></a>
@@ -40,12 +43,14 @@
                     <i class="fa fa-bars"></i>
                 </a>
                 <form class="form-inline  my-2 my-lg-0" style="padding-top: 13px;">
-                    <input class="form-control mr-sm-2" style="border-radius: 20px;" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-info bg-warning my-2 my-sm-0 " style="border-radius: 20px;" type="submit">Search</button>
-                  </form>
+                    <input class="form-control mr-sm-2" style="border-radius: 20px;" type="search" placeholder="Search"
+                        aria-label="Search">
+                    <button class="btn btn-outline-info bg-warning my-2 my-sm-0 " style="border-radius: 20px;"
+                        type="submit">Search</button>
+                </form>
             </div>
         </header>
- 
+
         <div class="parallax" style="margin-top: 10px; border-radius: 10px;"></div>
 
         <div class=" " style="margin-top: 20px;">
@@ -111,12 +116,11 @@
             </div>
         </div>
         <div class="parallax mt-4" style="margin-top: 10px; border-radius: 10px;"></div>
-
         <div class="row cardsDiv ">
             <div class="col-md-4">
                 <div class="card" style="width: 22rem; border-radius: 10px; ">
-                   <a href="https://www.sydney.com/"> <img class="card-img-top" src="../Images/operaHouse.jpg" alt="Card image cap"
-                        style="border-radius: 10px;"></a>
+                    <a href="https://www.sydney.com/"> <img class="card-img-top" src="../Images/operaHouse.jpg"
+                            alt="Card image cap" style="border-radius: 10px;"></a>
                     <div class="card-body">
                         <h4 class="card-title"><b>Capitol</b></h4>
                         <p class="card-text">Sydney — a coastal metropolis whose five million residents make it the
@@ -130,8 +134,8 @@
             </div>
             <div class="col-md-4">
                 <div class="card" style="width: 22rem; border-radius: 10px;">
-                   <a href="https://www.abs.gov.au/population"> <img class="card-img-top" src="../Images/population.jpg" alt="Card image cap"
-                        style="border-radius: 10px;"></a>
+                    <a href="https://www.abs.gov.au/population"> <img class="card-img-top"
+                            src="../Images/population.jpg" alt="Card image cap" style="border-radius: 10px;"></a>
                     <div class="card-body">
                         <h4 class="card-title"><b>Population</b></h4>
                         <p class="card-text ">In March 2019, the population of New South Wales was over 8 million,
@@ -145,8 +149,8 @@
             </div>
             <div class="col-md-4">
                 <div class="card" style="width: 22rem; border-radius: 10px;">
-                    <a href="https://www.nsw.gov.au/about-nsw"><img class="card-img-top" src="../Images/threeSisters.jpg" alt="Card image cap"
-                        style="border-radius: 10px;"></a>
+                    <a href="https://www.nsw.gov.au/about-nsw"><img class="card-img-top"
+                            src="../Images/threeSisters.jpg" alt="Card image cap" style="border-radius: 10px;"></a>
                     <div class="card-body">
                         <h4 class="card-title"><b>NSW</b></h4>
                         <p class="card-text">By establishing your business in regional NSW you can leverage an
@@ -157,70 +161,60 @@
                     </div>
                 </div>
             </div>
+        </div>      <hr />
+        <div class="row bottomDiv">
+            <div class="col-md-4">
+                <h3>NSW Government</h3>
+                <ul>
+                    <li>The Premier</li>
+                    <li>Media Releases</li>
+                    <li>NSW Ministers</li>
+                    <li>Have Your Say</li>
+                </ul>
+            </div>
+
+            <div class="col-md-4">
+                <h3>NSW Departments</h3>
+                <ul>
+                    <li>Education</li>
+                    <li>Health</li>
+                    <li>Planning and Development</li>
+                    <li>Regional NSW</li>
+                </ul>
+            </div>
+            <div class="col-md-4">
+                <h3>Popular</h3>
+                <ul>
+                    <li>News</li>
+                    <li>Life Events</li>
+                    <li>NSW School and Public Holidays</li>
+                    <li>Find a Job in NSW Government</li>
+                </ul>
+            </div>
 
         </div>
-
     </div>
-
-</body>
-<hr />
-<div class="container">
-
-    <div class="row bottomDiv">
-        <div class="col-md-4">
-            <h3>NSW Government</h3>
-            <ul>
-                <li>The Premier</li>
-                <li>Media Releases</li>
-                <li>NSW Ministers</li>
-                <li>Have Your Say</li>
-            </ul>
+    <footer class="footerDiv">
+        <div style="float: left; padding-top: 30px; padding-left: 30px; color: white;">
+            <p>We pay respect to the Traditional Custodians and First Peoples of NSW, and acknowledge their continued
+                connection to their country and culture.</p>
+            <p>Copyright © 2020</p>
         </div>
-
-        <div class="col-md-4">
-            <h3>NSW Departments</h3>
-            <ul>
-                <li>Education</li>
-                <li>Health</li>
-                <li>Planning and Development</li>
-                <li>Regional NSW</li>
-            </ul>
+        <div style="float:right;">
+            <a href="https://www.facebook.com/ServiceNSW/" class="fa fa-facebook"></a>
+            <a href="https://twitter.com/ServiceNSW" class="fa fa-twitter"></a>
+            <a href="https://www.linkedin.com/company/servicensw/?originalSubdomain=au" class="fa fa-linkedin"></a>
         </div>
-        <div class="col-md-4">
-            <h3>Popular</h3>
-            <ul>
-                <li>News</li>
-                <li>Life Events</li>
-                <li>NSW School and Public Holidays</li>
-                <li>Find a Job in NSW Government</li>
-            </ul>
-        </div>
-
-    </div>
-</div>
-
-<footer class="footerDiv">
-    <div style="float: left; padding-top: 30px; padding-left: 30px; color: white;">
-        <p>We pay respect to the Traditional Custodians and First Peoples of NSW, and acknowledge their continued
-            connection to their country and culture.</p>
-        <p>Copyright © 2020</p>
-    </div>
-    <div style="float:right;">
-        <a href="https://www.facebook.com/ServiceNSW/" class="fa fa-facebook"></a>
-        <a href="https://twitter.com/ServiceNSW" class="fa fa-twitter"></a>
-        <a href="https://www.linkedin.com/company/servicensw/?originalSubdomain=au" class="fa fa-linkedin"></a>
-    </div>
-
-</footer>
-<script>
-    function myFunction() {
-        var x = document.getElementById("myTopnav");
-        if (x.className === "topnav") {
-            x.className += " responsive";
-        } else {
-            x.className = "topnav";
+    </footer>
+    <script>
+        function myFunction() {
+            var x = document.getElementById("myTopnav");
+            if (x.className === "topnav") {
+                x.className += " responsive";
+            } else {
+                x.className = "topnav";
+            }
         }
-    }
-</script>
-
+    </script>
+</body>
 </html>
