--- a/HTML/Regions.html
+++ b/HTML/Regions.html
@@ -24,7 +24,7 @@
 
 <body>
     <div class="container">
-        <header id="regionHeader" >
+        <header id="regionHeader">
 
             <div class="topnav" id="myTopnav" style="background-color: chocolate; border-radius: 10px;">
                 <a href="index.html" class="active"><img src="../Images/nsw.jpg" width="70" height="35"
@@ -63,7 +63,8 @@
         <hr style="height: 3px; color: brown; background-color: cadetblue;">
         <div id="sectionDiv" class="mt-4">
             <div id="regionalInfo">
-                <h3 class="">Regional New South Wales: dynamic, productive and connected</h3>
+                <h3 class="text-center">Regional New South Wales</h3><br>
+                <h5>A Dynamic, Productive and Connected Community</h5>
                 <p>New South Wales (NSW) has a population of 7.9 million people (including Sydney), and it’s predicted
                     that it will increase to over 9.0 million by 2027/2028.</p>
                 <p>It also has the largest and most diverse regional economy of all Australian states.</p>
@@ -80,173 +81,148 @@
             <div id="asideRegion">
                 <h5 class="mt-2 ml-2 text-center">On this Page</h5>
                 <ul>
-                    <a href="#sectionDiv"><li class="lia">Regional New South Wales: dynamic, productive and connected</li></a>
-                   <a href="#regionsDiv"> <li class="lia">An Overview of NSW Region</li></a>
-                   <a href=""> <li class="lia">Living and Working in Regional NSW</li></a>
-                  <a href="">  <li class="lia">Investment Opportunties in Regional NSW</li></a>
+                    <a href="#sectionDiv">
+                        <li class="lia">Regional New South Wales: dynamic, productive and connected</li>
+                    </a>
+                    <a href="#regionsDiv">
+                        <li class="lia">An Overview of NSW Region</li>
+                    </a>
+                    <a href="">
+                        <li class="lia">Living and Working in Regional NSW</li>
+                    </a>
+                    <a href="">
+                        <li class="lia">Investment Opportunties in Regional NSW</li>
+                    </a>
+                </ul>
+            </div>
+        </div>
+        <div id="regionsDiv">
+            <h5 class="mt-4">An overview of the nine regions of NSW</h5>
+
+            <div id="main" style="border:1px solid black;  height:600px; width:100%; background-color:rgb(5, 65, 3);">
+                <div id="top" style="height:20%; width:100%; background-color:rgb(230, 150, 119)"></div>
+
+                <div id="left" style="width:15%; height:80%; background-color:mediumseagreen; float:left;"><img
+                        src="../Images/parasailing-1557082__480.jpg" class="w-100 h-100" /></div>
+                <div style="width:100%; height:40%; background-color:rgb(59, 105, 192);">
+                    <div
+                        style="height:55%; width: 20%; border: 1px solid black; float:right; margin-right: 80px; margin-top: 50px; background-color: burlywood;">
+                        <h4 class="text-center">North Coast</h4>
+                        <hr />
+                        <p class="text-center">It extends from Tweed Shire Council in the north <a
+                                href="https://www.lls.nsw.gov.au/our-regions/north-coast">more</a></p>
+                    </div>
+                    <div
+                        style="height:55%; width: 20%; border: 1px solid black; float:right; margin-right: 80px; margin-top:50px; background-color: cyan;">
+                        <h4 class="text-center">Western</h4>
+                        <hr />
+                        <p class="text-center">The largest in NSW, covering 314,500 km² <a
+                                href="https://www.lls.nsw.gov.au/our-regions/western">more</a></p>
+                    </div>
+                    <div class="text-center"
+                        style="height:55%; width: 20%; border: 1px solid black; float:left; margin-left: 50px; margin-top:50px; background-color: white;">
+                        <h4>South Coast</h4>
+                        <hr />
+                        <p>It covers 55,600 square kilometres of south-east NSW <a
+                                href="https://www.lls.nsw.gov.au/our-regions/south-east">more</a></p>
+                    </div>
+                </div>
+                <div style="width:100%; height:40%; background-color:rgb(104, 173, 127);">
+
+                    <div
+                        style="height:55%; width: 20%; border: 1px solid black; float:right; margin-right: 80px; margin-top: 50px; background-color: rgb(32, 221, 221);">
+                        <h4 class="text-center">Riverina</h4>
+                        <hr />
+                        <p class="text-center">The area covers around 6.7 million hectares of land <a
+                                href="https://www.lls.nsw.gov.au/our-regions/riverina">more</a></p>
+
+                    </div>
+                    <div
+                        style="height:55%; width: 20%; border: 1px solid black; float:right; margin-right: 80px; margin-top:50px; background-color: gray;">
+                        <h4 class="text-center">Central West</h4>
+                        <hr />
+                        <p class="text-center">The region is home to around 110,000 people<a
+                                href="https://www.lls.nsw.gov.au/our-regions/central-west">more</a></p>
+                    </div>
+                    <div
+                        style="height:55%; width: 20%; border: 1px solid black; float:left; margin-left: 50px; margin-top:50px; background-color: lightpink;">
+                        <h4 class="text-center">North West</h4>
+                        <hr />
+                        <p class="text-center">It is made up of the council areas of Gunnedah <a
+                                href="https://www.lls.nsw.gov.au/our-regions/north-west">more</a></p>
+                    </div>
+                </div>
+            </div>
+        </div> <hr />
+        <div class="row bottomDiv">
+            <div class="col-md-4">
+                <h3>NSW Government</h3>
+                <ul>
+                    <li>The Premier</li>
+                    <li>Media Releases</li>
+                    <li>NSW Ministers</li>
+                    <li>Have Your Say</li>
                 </ul>
             </div>
 
-
-        </div>
-<div id="regionsDiv">
-        <h5 class="mt-4">An overview of the nine regions of NSW</h5>
-
-        <div id="main" style="border:1px solid black;  height:600px; width:100%; background-color:rgb(5, 65, 3);">
-            <div id="top" style="height:20%; width:100%; background-color:rgb(230, 150, 119)"></div>
-
-            <div id="left" style="width:15%; height:80%; background-color:mediumseagreen; float:left;"><img
-                    src="../Images/parasailing-1557082__480.jpg" class="w-100 h-100" /></div>
-            <div style="width:100%; height:40%; background-color:rgb(59, 105, 192);">
-                <div
-                    style="height:55%; width: 20%; border: 1px solid black; float:right; margin-right: 80px; margin-top: 50px; background-color: burlywood;">
-                    <h4 class="text-center">North Coast</h4>
-                    <hr />
-                    <p class="text-center">It extends from Tweed Shire Council in the north <a
-                            href="https://www.lls.nsw.gov.au/our-regions/north-coast">more</a></p>
-                </div>
-                <div
-                    style="height:55%; width: 20%; border: 1px solid black; float:right; margin-right: 80px; margin-top:50px; background-color: cyan;">
-                    <h4 class="text-center">Western</h4>
-                    <hr />
-                    <p class="text-center">The largest in NSW, covering 314,500 km² <a
-                            href="https://www.lls.nsw.gov.au/our-regions/western">more</a></p>
-                </div>
-                <div class="text-center"
-                    style="height:55%; width: 20%; border: 1px solid black; float:left; margin-left: 50px; margin-top:50px; background-color: white;">
-                    <h4>South Coast</h4>
-                    <hr />
-                    <p>It covers 55,600 square kilometres of south-east NSW <a
-                            href="https://www.lls.nsw.gov.au/our-regions/south-east">more</a></p>
-                </div>
+            <div class="col-md-4">
+                <h3>NSW Departments</h3>
+                <ul>
+                    <li>Education</li>
+                    <li>Health</li>
+                    <li>Planning and Development</li>
+                    <li>Regional NSW</li>
+                </ul>
             </div>
-            <div style="width:100%; height:40%; background-color:rgb(104, 173, 127);">
-
-                <div
-                    style="height:55%; width: 20%; border: 1px solid black; float:right; margin-right: 80px; margin-top: 50px; background-color: rgb(32, 221, 221);">
-                    <h4 class="text-center">Riverina</h4>
-                    <hr />
-                    <p class="text-center">The area covers around 6.7 million hectares of land <a
-                            href="https://www.lls.nsw.gov.au/our-regions/riverina">more</a></p>
-
-                </div>
-                <div
-                    style="height:55%; width: 20%; border: 1px solid black; float:right; margin-right: 80px; margin-top:50px; background-color: gray;">
-                    <h4 class="text-center">Central West</h4>
-                    <hr />
-                    <p class="text-center">The region is home to around 110,000 people<a
-                            href="https://www.lls.nsw.gov.au/our-regions/central-west">more</a></p>
-                </div>
-                <div
-                    style="height:55%; width: 20%; border: 1px solid black; float:left; margin-left: 50px; margin-top:50px; background-color: lightpink;">
-                    <h4 class="text-center">North West</h4>
-                    <hr />
-                    <p class="text-center">It is made up of the council areas of Gunnedah <a
-                            href="https://www.lls.nsw.gov.au/our-regions/north-west">more</a></p>
-                </div>
+            <div class="col-md-4">
+                <h3>Popular</h3>
+                <ul>
+                    <li>News</li>
+                    <li>Life Events</li>
+                    <li>NSW School and Public Holidays</li>
+                    <li>Find a Job in NSW Government</li>
+                </ul>
             </div>
-
-
-
-
         </div>
     </div>
+    <footer class="footerDiv">
+        <div style="float: left; padding-top: 30px; padding-left: 30px; color: white;">
+            <p>We pay respect to the Traditional Custodians and First Peoples of NSW, and acknowledge their continued
+                connection to their country and culture.</p>
+            <p>Copyright © 2020</p>
+        </div>
+        <div style="float:right;">
+            <a href="https://www.facebook.com/ServiceNSW/" class="fa fa-facebook"></a>
+            <a href="https://twitter.com/ServiceNSW" class="fa fa-twitter"></a>
+            <a href="https://www.linkedin.com/company/servicensw/?originalSubdomain=au" class="fa fa-linkedin"></a>
+        </div>
 
+    </footer>
+    <script>
+        function myFunction() {
+            var x = document.getElementById("myTopnav");
+            if (x.className === "topnav") {
+                x.className += " responsive";
+            } else {
+                x.className = "topnav";
+            }
+        }
+        var myIndex = 0;
+        carousel();
 
+        function carousel() {
+            var i;
+            var x = document.getElementsByClassName("mySlides");
+            for (i = 0; i < x.length; i++) {
+                x[i].style.display = "none";
+            }
+            myIndex++;
+            if (myIndex > x.length) { myIndex = 1 }
+            x[myIndex - 1].style.display = "block";
+            setTimeout(carousel, 3000);
+        }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    </div>
-
+    </script>
 </body>
-<hr />
-<div class="container">
-
-    <div class="row bottomDiv">
-        <div class="col-md-4">
-            <h3>NSW Government</h3>
-            <ul>
-                <li>The Premier</li>
-                <li>Media Releases</li>
-                <li>NSW Ministers</li>
-                <li>Have Your Say</li>
-            </ul>
-        </div>
-
-        <div class="col-md-4">
-            <h3>NSW Departments</h3>
-            <ul>
-                <li>Education</li>
-                <li>Health</li>
-                <li>Planning and Development</li>
-                <li>Regional NSW</li>
-            </ul>
-        </div>
-        <div class="col-md-4">
-            <h3>Popular</h3>
-            <ul>
-                <li>News</li>
-                <li>Life Events</li>
-                <li>NSW School and Public Holidays</li>
-                <li>Find a Job in NSW Government</li>
-            </ul>
-        </div>
-
-    </div>
-</div>
-
-<footer class="footerDiv">
-    <div style="float: left; padding-top: 30px; padding-left: 30px; color: white;">
-        <p>We pay respect to the Traditional Custodians and First Peoples of NSW, and acknowledge their continued
-            connection to their country and culture.</p>
-        <p>Copyright © 2020</p>
-    </div>
-    <div style="float:right;">
-        <a href="https://www.facebook.com/ServiceNSW/" class="fa fa-facebook"></a>
-        <a href="https://twitter.com/ServiceNSW" class="fa fa-twitter"></a>
-        <a href="https://www.linkedin.com/company/servicensw/?originalSubdomain=au" class="fa fa-linkedin"></a>
-    </div>
-
-</footer>
-
-
-
-<script>
-    function myFunction() {
-        var x = document.getElementById("myTopnav");
-        if (x.className === "topnav") {
-            x.className += " responsive";
-        } else {
-            x.className = "topnav";
-        }
-    }
-    var myIndex = 0;
-    carousel();
-
-    function carousel() {
-        var i;
-        var x = document.getElementsByClassName("mySlides");
-        for (i = 0; i < x.length; i++) {
-            x[i].style.display = "none";
-        }
-        myIndex++;
-        if (myIndex > x.length) { myIndex = 1 }
-        x[myIndex - 1].style.display = "block";
-        setTimeout(carousel, 3000);
-    }
-
-</script>
 
 </html>
