added in economy

--- a/HTML/Economy.html
+++ b/HTML/Economy.html
@@ -49,61 +49,106 @@
         </header>
 
         <div id="brg">
-            <img src="../Images/money2.webp" alt="" height="500" width="100%" style="border-radius: 10px; margin-top: 20px;" >
+            <img src="../Images/money2.webp" alt="" height="500" width="100%"
+                style="border-radius: 10px; margin-top: 20px;">
 
         </div>
 
 
         <div class="" style="margin-top: 20px;">
-            <div class="leftaside"  style=" width:15%; height: 600px; background-image: url(../Images/business_Lady.Webp); float: left;  ">
+            <div class="leftaside"
+                style=" width:15%; height: 600px; background-image: url(../Images/business_Lady.Webp);  ">
+                <div style="background-color: chartreuse; height: 600px; width: 50%; f"></div>
             </div>
-            <div style="margin-left: 20px;">
-            <h2 class="text-center">Economy</h2>
-            <p>At more than half-a-trillion dollars, NSW is Australia’s largest state economy. The state has a diversified, service driven economy.</p>
-            <p>The industries that are the largest contributors to the economy are:</p>
-           <ul>
-               <li>business services (which includes financial services, real estate services and information media and telecommunications)</li>
-               <li>construction</li>
-               <li>manufacturing</li>
-               <li>health</li>
-               <li>education.</li>
-               <p>The largest areas of employment are:</p>
-               <li>health</li>
-               <li>retail trade and professional services</li>
-               <li>scientific and technical services.</li>
-               <p><a href="https://www.treasury.nsw.gov.au/nsw-economy/about-nsw-economy">Find out more about NSW Economy</a></p>
-           </ul>
+            <div style="width: 80%; height: 200px; float:right">
+                <h1>NSW Economy</h1>
+                <p style="font-size: 16px;">At more than half-a-trillion dollars, NSW is Australia’s largest state
+                    economy. The state has a
+                    diversified, service driven economy.</p>
+                <p style="font-size: 16px;">The industries that are the largest contributors to the economy are:</p>
+                <ul>
+                    <li>business services (which includes financial services, real estate services and information media
+                        and telecommunications)</li>
+                    <li class="lisize">construction</li>
+                    <li class="lisize">manufacturing</li>
+                    <li class="lisize">manufacturing</li>
+                    <li class="lisize">health</li>
+                    <li class="lisize">education</li>
+                </ul>
+                <p>The largest areas of employment are:</p>
+                <ul>
+                    <li class="lisize">health</li>
+                    <li class="lisize">retail trade and professional services</li>
+                    <li class="lisize">scientific and technical services.</li>
+
+                </ul>
+
+                <p class="lisize"><a href="https://www.treasury.nsw.gov.au/nsw-economy/about-nsw-economy">Find out more
+                        about NSW
+                        Economy</a></p>
+            </div>
+
         </div>
+    </div>
+        <hr />
+        <div class="row bottomDiv">
+            <div class="col-md-4">
+                <h3>NSW Government</h3>
+                <ul>
+                    <li>The Premier</li>
+                    <li>Media Releases</li>
+                    <li>NSW Ministers</li>
+                    <li>Have Your Say</li>
+                </ul>
+            </div>
+
+            <div class="col-md-4">
+                <h3>NSW Departments</h3>
+                <ul>
+                    <li>Education</li>
+                    <li>Health</li>
+                    <li>Planning and Development</li>
+                    <li>Regional NSW</li>
+                </ul>
+            </div>
+            <div class="col-md-4">
+                <h3>Popular</h3>
+                <ul>
+                    <li>News</li>
+                    <li>Life Events</li>
+                    <li>NSW School and Public Holidays</li>
+                    <li>Find a Job in NSW Government</li>
+                </ul>
+            </div>
         </div>
 
 
 
     </div>
-    
-</body>
-<hr/>
-<div class="container">
- 
-    <div class="row">
-        <div class="col-md-4"><h3 >NSW Government</h3></div>
-        
-        <div class="col-md-4"><h3 >NSW Departments</h3></div>
-       <div class="col-md-4"> <h3 >Popular</h3></div>
 
-    </div>
+    <footer class="footerDiv">
+        <div style="float: left; padding-top: 30px; padding-left: 30px; color: white;">
+            <p>We pay respect to the Traditional Custodians and First Peoples of NSW, and acknowledge their continued
+                connection to their country and culture.</p>
+            <p>Copyright © 2020</p>
+        </div>
+        <div style="float:right;">
+            <a href="https://www.facebook.com/ServiceNSW/" class="fa fa-facebook"></a>
+            <a href="https://twitter.com/ServiceNSW" class="fa fa-twitter"></a>
+            <a href="https://www.linkedin.com/company/servicensw/?originalSubdomain=au" class="fa fa-linkedin"></a>
+        </div>
 
-
- 
-</div>
-<script>
-    function myFunction() {
-        var x = document.getElementById("myTopnav");
-        if (x.className === "topnav") {
-            x.className += " responsive";
-        } else {
-            x.className = "topnav";
+    </footer>
+    <script>
+        function myFunction() {
+            var x = document.getElementById("myTopnav");
+            if (x.className === "topnav") {
+                x.className += " responsive";
+            } else {
+                x.className = "topnav";
+            }
         }
-    }
-</script>
+    </script>
+</body>
 
 </html>
