--- a/HTML/Regions.html
+++ b/HTML/Regions.html
@@ -97,7 +97,7 @@
             </div>
         </div>
         <div id="regionsDiv">
-            <h5 class="mt-4 mb-4">An overview of the nine regions of NSW</h5>
+            <h5 class="mt-4 mb-4">An overview of the six out of nine regions of NSW</h5>
 
             <div id="main" style="border:1px solid black;  height:600px; width:100%; background-color:rgb(5, 65, 3);">
                 <div id="top" style="height:20%; width:100%; background-color:rgb(230, 150, 119)"></div>
@@ -198,31 +198,11 @@
         </div>
 
     </footer>
-    <script>
-        function myFunction() {
-            var x = document.getElementById("myTopnav");
-            if (x.className === "topnav") {
-                x.className += " responsive";
-            } else {
-                x.className = "topnav";
-            }
-        }
-        var myIndex = 0;
-        carousel();
-
-        function carousel() {
-            var i;
-            var x = document.getElementsByClassName("mySlides");
-            for (i = 0; i < x.length; i++) {
-                x[i].style.display = "none";
-            }
-            myIndex++;
-            if (myIndex > x.length) { myIndex = 1 }
-            x[myIndex - 1].style.display = "block";
-            setTimeout(carousel, 3000);
-        }
-
-    </script>
+     
 </body>
-
+<script src="../JS/Regions.js"></script>
 </html>
+<script>
+    Regions.setup();
+    Regions.carousel();
+</script>
