--- a/HTML/index.html
+++ b/HTML/index.html
@@ -9,53 +9,58 @@
     <!-- Bootstrap  -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
-    <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
-
     <!-- Load an icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="../JS/Scripts"></script>
-
+   <!-- Font Awesome Icon -->
+   <script src="https://kit.fontawesome.com/695e1ffa5d.js" crossorigin="anonymous"></script>
+   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <title>Welcom to NSW</title>
-
 </head>
 
 <body>
     <div class="container">
+        <!--Header-->
         <header>
+            <nav class="navbar navbar-expand-lg navbar-light  rounded mt-2 ">
+                <a class="navbar-brand text-white" href="#">
+                    <img src="../Images/harbourBridge.jpg" width="50" height="30" class="d-inline-block align-top " alt="">
+                    My NSW
+                  </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                  <ul class="navbar-nav ">
+                    <li class="nav-item active ">
+                      <a class="nav-link text-white" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-white" href="Regions.html">Regions</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-white" href="#">Economy</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-white " href="Culture.html">Culture</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="Councils.html">Councils</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link text-white " href="Geography.html">Geography</a>
+                      </li>
 
-            <div class="topnav" id="myTopnav" style="background-color: chocolate; border-radius: 10px;">
-                <a href="index.html" class="active"><img src="../Images/nsw.jpg" width="70" height="35"
-                        class="d-inline-block align-top logimg" alt=""></a>
-
-                <a class="navbar-brand   " href="index.html" style="margin-right: 20px;">My NSW</a>
-                <a href="index.html">Home</a>
-                <a href="Regions.html">Regions</a>
-                <a href="Economy.html">Economy</a>
-                <a href="Culture.html">Culture</a>
-                <a href="Councils.html">Councils</a>
-                <a href="Geography.html">Geography</a>
-                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                    <i class="fa fa-bars"></i>
-                </a>
-                <form class="form-inline  my-2 my-lg-0" style="padding-top: 13px;">
-                    <input class="form-control mr-sm-2" style="border-radius: 20px;" type="search" placeholder="Search"
-                        aria-label="Search">
-                    <button class="btn btn-outline-info bg-warning my-2 my-sm-0 " style="border-radius: 20px;"
-                        type="submit">Search</button>
-                </form>
-            </div>
+                  </ul>
+                </div>
+              </nav>
+           
         </header>
-
+<!--Header-->
         <div class="parallax" style="margin-top: 10px; border-radius: 10px;"></div>
 
         <div class=" " style="margin-top: 20px;">
-            <div class="leftaside "
-                style=" width:15%; height: 750px; background-image: url(../Images/awards.jpg); float: left;  ">
+            <div id="leftaside" class="d-none d-sm-block " style=" width:15%; height: 750px; float: left;  ">
+           <img src="../Images/awards.jpg"  class="h-100 w-100" />
             </div>
             <div id="info" class="">
                 <h2>Key facts about NSW</h2>
@@ -117,7 +122,7 @@
         </div>
         <div class="parallax mt-4" style="margin-top: 10px; border-radius: 10px;"></div>
         <div class="row cardsDiv ">
-            <div class="col-md-4">
+            <div class="col-lg-4">
                 <div class="card" style="width: 22rem; border-radius: 10px; ">
                     <a href="https://www.sydney.com/"> <img class="card-img-top" src="../Images/operaHouse.jpg"
                             alt="Card image cap" style="border-radius: 10px;"></a>
@@ -132,7 +137,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-lg-4">
                 <div class="card" style="width: 22rem; border-radius: 10px;">
                     <a href="https://www.abs.gov.au/population"> <img class="card-img-top"
                             src="../Images/population.jpg" alt="Card image cap" style="border-radius: 10px;"></a>
@@ -147,7 +152,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-lg-4">
                 <div class="card" style="width: 22rem; border-radius: 10px;">
                     <a href="https://www.nsw.gov.au/about-nsw"><img class="card-img-top"
                             src="../Images/threeSisters.jpg" alt="Card image cap" style="border-radius: 10px;"></a>
@@ -161,7 +166,8 @@
                     </div>
                 </div>
             </div>
-        </div>      <hr />
+        </div>
+        <hr />
         <div class="row bottomDiv">
             <div class="col-md-4">
                 <h3>NSW Government</h3>
@@ -216,5 +222,20 @@
             }
         }
     </script>
+    <script src="../JS/Scripts"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+
 </body>
+
 </html>
