making responsive regional page

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -141,7 +141,7 @@
         <div class="container">
             <div class="row mt-4 ">
                 <div class="col-lg-4 col-md-12 ">
-                    <div class="card" style="width: 22rem; border-radius: 10px; ">
+                    <div class="card" style=" border-radius: 10px; ">
                         <a href="https://www.sydney.com/"> <img class="img-fluid card-img-top"
                                 src="../Images/operaHouse.jpg" alt="Card image cap" style="border-radius: 10px;"></a>
                         <div class="card-body">
@@ -157,7 +157,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-12">
-                    <div class="card" style="width: 22rem; border-radius: 10px;">
+                    <div class="card" style=" border-radius: 10px;">
                         <a href="https://www.abs.gov.au/population"> <img class="img-fluid card-img-top"
                                 src="../Images/population.jpg" alt="Card image cap"
                                 style="border-radius: 10px; height: 230px;"></a>
@@ -175,7 +175,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-12 ">
-                    <div class="card" style="width: 22rem; border-radius: 10px;">
+                    <div class="card" style=" border-radius: 10px;">
                         <a href="https://www.nsw.gov.au/about-nsw"><img class=" img-fluid card-img-top"
                                 src="../Images/threeSisters.jpg" alt="Card image cap" style="border-radius: 10px;"></a>
                         <div class="card-body">
@@ -190,6 +190,7 @@
                 </div>
             </div>
             <hr />
+            <div class="container">
             <div class="row ">
                 <div class="col-md-4">
                     <h3>NSW Government</h3>
@@ -223,6 +224,7 @@
             </div>
         </div>
     </div>
+</div>
     <footer class="footerDiv">
         <div style="float: left; padding-top: 30px; padding-left: 30px; color: white;">
             <p>We pay respect to the Traditional Custodians and First Peoples of NSW, and acknowledge their continued
