--- a/HTML/test.html
+++ b/HTML/test.html
@@ -91,6 +91,77 @@
 
 <p style="font-size: 2em;">Enhave</p>
 
+<!------------------------------------->
+<div id="main"
+style="border:1px solid black;  height:600px; width:100%; background-color:rgb(5, 65, 3);">
+<div id="top" style="height:20%; width:100%; background-color:rgb(230, 150, 119)"></div>
+
+<div id="left" style="width:15%; height:80%; background-color:mediumseagreen; float:left;"><img
+        src="../Images/parasailing-1557082__480.jpg" class="w-100 h-100" /></div>
+<div style="width:100%; height:40%; background-color:rgb(59, 105, 192);">
+    <div
+        style="height:55%; width: 20%; border: 1px solid black; float:right; margin-right: 80px; margin-top: 50px; background-color: burlywood;">
+        <h4 class="text-center">North Coast</h4>
+        <hr />
+        <p class="text-center">It extends from Tweed Shire Council in the north <a
+                href="https://www.lls.nsw.gov.au/our-regions/north-coast">more</a></p>
+    </div>
+    <div
+        style="height:55%; width: 20%; border: 1px solid black; float:right; margin-right: 80px; margin-top:50px; background-color: cyan;">
+        <h4 class="text-center">Western</h4>
+        <hr />
+        <p class="text-center">The largest in NSW, covering 314,500 km² <a
+                href="https://www.lls.nsw.gov.au/our-regions/western">more</a></p>
+    </div>
+    <div class="text-center"
+        style="height:55%; width: 20%; border: 1px solid black; float:left; margin-left: 50px; margin-top:50px; background-color: white;">
+        <h4>South Coast</h4>
+        <hr />
+        <p>It covers 55,600 square kilometres of south-east NSW <a
+                href="https://www.lls.nsw.gov.au/our-regions/south-east">more</a></p>
+    </div>
+</div>
+<div style="width:100%; height:40%; background-color:rgb(104, 173, 127);">
+
+    <div
+        style="height:55%; width: 20%; border: 1px solid black; float:right; margin-right: 80px; margin-top: 50px; background-color: rgb(32, 221, 221);">
+        <h4 class="text-center">Riverina</h4>
+        <hr />
+        <p class="text-center">The area covers around 6.7 million hectares of land <a
+                href="https://www.lls.nsw.gov.au/our-regions/riverina">more</a></p>
+
+    </div>
+    <div
+        style="height:55%; width: 20%; border: 1px solid black; float:right; margin-right: 80px; margin-top:50px; background-color: gray;">
+        <h4 class="text-center">Central West</h4>
+        <hr />
+        <p class="text-center">The region is home to around 110,000 people<a
+                href="https://www.lls.nsw.gov.au/our-regions/central-west">more</a></p>
+    </div>
+    <div
+        style="height:55%; width: 20%; border: 1px solid black; float:left; margin-left: 50px; margin-top:50px; background-color: lightpink;">
+        <h4 class="text-center">North West</h4>
+        <hr />
+        <p class="text-center">It is made up of the council areas of Gunnedah <a
+                href="https://www.lls.nsw.gov.au/our-regions/north-west">more</a></p>
+    </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   <style>
     .column {
       width: 170px;
