make footer responsive

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -225,16 +225,20 @@
         </div>
     </div>
 </div>
-    <footer class="footerDiv">
-        <div style="float: left; padding-top: 30px; padding-left: 30px; color: white;">
+    <footer>
+        <div class="footerDiv">
+            <div class="row">
+        <div class="col-lg-9 " style="float: left; padding-top: 30px; padding-left: 30px; color: white;">
             <p>We pay respect to the Traditional Custodians and First Peoples of NSW, and acknowledge their continued
                 connection to their country and culture.</p>
             <p>Copyright © 2020</p>
         </div>
-        <div style="float:right;">
+        <div class="col-lg-3 pt-2 float-right"  >
             <a href="https://www.facebook.com/ServiceNSW/" class="fa fa-facebook"></a>
             <a href="https://twitter.com/ServiceNSW" class="fa fa-twitter"></a>
             <a href="https://www.linkedin.com/company/servicensw/?originalSubdomain=au" class="fa fa-linkedin"></a>
+        </div>
+    </div>
         </div>
     </footer>
     <script>
