--- a/HTML/index.html
+++ b/HTML/index.html
@@ -33,7 +33,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ">
+                    <ul class="navbar-nav ml-auto">
                         <li class="nav-item active ">
                             <a class="nav-link text-white" href="index.html">Home <span
                                     class="sr-only">(current)</span></a>
@@ -42,7 +42,7 @@
                             <a class="nav-link text-white" href="Regions.html">Regions</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#">Economy</a>
+                            <a class="nav-link text-white" href="Economy.html">Economy</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white " href="Culture.html">Culture</a>
