--- a/HTML/Regions.html
+++ b/HTML/Regions.html
@@ -19,9 +19,9 @@
 <body>
     <!--Header Start-->
     <header>
-        <div class="container">
+        <div class="container ">
 
-            <nav class="navbar navbar-expand-lg navbar-light  rounded mt-2 ">
+            <nav class="navbar  navbar-expand-lg navbar-light  rounded my-2  ">
                 <a class="navbar-brand text-white " href="#">
                     <img src="../Images/harbourBridge.jpg" width="50" height="30" class="d-inline-block align-top "
                         alt="">
@@ -64,7 +64,7 @@
 
     <main class="mt-2">
         <div class="container">
-            <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+            <div id="carouselExampleCaptions" class="carousel slide   " data-ride="carousel">
                 <ol class="carousel-indicators">
                     <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
                     <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
